<resources>
    <string name="app_name">AndroidApplication</string>
    <string name="my_name">Maxim</string>
    <string name="last_name">Petrunin</string>
    <string name="button_name">Нажать</string>
    <string name="enter_name">Введите ваше имя</string>
    <string name="text_hello">Добро пожаловать в приложение автошколы Kaz1deX</string>
    <string name="button_next">Далее</string>
    <string name="button_back">Назад</string>
    <string name="main_text">Автошкола Kaz1deX</string>
    <string name="text_name_information">Ваше имя: </string>
    <string name="change_name">Хотите ввести другое имя?</string>
    <string name="your_name">Ваше имя</string>
    <string name="yes_text">Да</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_text">Лист</string>
</resources>