<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr"
    tools:context=".HelloFragment">

    <Button
        android:id="@+id/button_hello_fragment"
        android:layout_width="228dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/my_color_orange"
        android:text="@string/button_next"
        android:textSize="@dimen/my_dimension16"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/pngwing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/greenhowl"
        app:layout_constraintBottom_toTopOf="@+id/button_hello_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.485" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/enter_name"
        android:textAlignment="center"
        android:textColor="@color/my_color_orange"
        android:textSize="@dimen/my_dimension20"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/imageView7" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="172dp"
        android:ems="10"
        android:hint="@string/my_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button_hello_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/text_hello"
        android:textAlignment="center"
        android:textColor="@color/my_color_orange"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

</androidx.constraintlayout.widget.ConstraintLayout>